Implement deliverables
