# backend/src/wt/provider/db/models/__init__.py
@@ -1,3 +1,5 @@
 from wt.provider.db.models.projects import PROJECTS_TABLE
 from wt.provider.db.models.files import FILES_TABLE
 from wt.provider.db.models.user import USER_TABLE
+from wt.provider.db.models.ids import IDS_COUNTER_TABLE, OBJECTS_TRACKER_TABLE
+from wt.provider.db.models.deliverables import DELIVERABLES_TABLE
